--- a/composer.json
+++ b/composer.json
@@ -4,10 +4,10 @@
     "type": "library",
     "license": "MIT",
     "config": {
-        "sort-packages": true,
         "platform": {
             "php": "7.4.7"
-        }
+        },
+        "sort-packages": true
     },
     "autoload": {
         "psr-4": {
