--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
         }
     },
     "require": {
-        "php": "^8.0",
+        "php": "^7.4.7|^8.0",
         "symfony/event-dispatcher": "^5.2",
         "symfony/http-kernel": "^5.2"
     },
@@ -25,7 +25,7 @@
         "justinrainbow/json-schema": "^5.2.10",
         "myonlinestore/coding-standard": "^3.1",
         "phpunit/phpunit": "^9.5",
-        "roave/infection-static-analysis-plugin": "^1.7",
+        "roave/infection-static-analysis-plugin": "^1.16",
         "thecodingmachine/safe": "^1.3",
         "vimeo/psalm": "^4.7"
     }
