--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,11 @@
     "type": "library",
     "license": "MIT",
     "config": {
-        "sort-packages": true
+        "sort-packages": true,
+        "allow-plugins": {
+            "infection/extension-installer": true,
+            "dealerdirect/phpcodesniffer-composer-installer": true
+        }
     },
     "autoload": {
         "psr-4": {
@@ -17,16 +21,19 @@
         }
     },
     "require": {
-        "php": "^7.4.7|^8.0",
-        "symfony/event-dispatcher": "^5.2",
-        "symfony/http-kernel": "^5.2"
+        "php": "^8.0",
+        "cuyz/valinor": "^0.6.0",
+        "sensio/framework-extra-bundle": "^6.2",
+        "symfony/event-dispatcher": "^5.4",
+        "symfony/http-kernel": "^5.4"
     },
     "require-dev": {
-        "justinrainbow/json-schema": "^5.2.10",
         "myonlinestore/coding-standard": "^3.1",
+        "myonlinestore/php-devtools": "^0.2.0",
         "phpunit/phpunit": "^9.5",
-        "roave/infection-static-analysis-plugin": "^1.16",
-        "thecodingmachine/safe": "^1.3",
-        "vimeo/psalm": "^4.7"
+        "psalm/plugin-phpunit": "^0.16.1",
+        "psalm/plugin-symfony": "^3.1",
+        "roave/infection-static-analysis-plugin": "^1.18",
+        "vimeo/psalm": "^4.22"
     }
 }
