--- a/psalm.xml.dist
+++ b/psalm.xml.dist
@@ -1,6 +1,5 @@
 <?xml version="1.0"?>
 <psalm errorLevel="1"
-       totallyTyped="true"
        xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
        xmlns="https://getpsalm.org/schema/config"
        xsi:schemaLocation="https://getpsalm.org/schema/config vendor/vimeo/psalm/config.xsd"
@@ -21,4 +20,9 @@
             </errorLevel>
         </PropertyNotSetInConstructor>
     </issueHandlers>
+
+    <plugins>
+        <pluginClass class="Psalm\SymfonyPsalmPlugin\Plugin"/>
+        <pluginClass class="Psalm\PhpUnitPlugin\Plugin"/>
+    </plugins>
 </psalm>
