--- a/composer.json
+++ b/composer.json
@@ -24,8 +24,8 @@
         "php": "^8.0",
         "cuyz/valinor": "^0.6.0",
         "sensio/framework-extra-bundle": "^6.2",
-        "symfony/event-dispatcher": "^5.4",
-        "symfony/http-kernel": "^5.4"
+        "symfony/event-dispatcher": "^5.4 || ^6.0",
+        "symfony/http-kernel": "^5.4 || ^6.0"
     },
     "require-dev": {
         "myonlinestore/coding-standard": "^3.1",
